@@ -1,5 +1,11 @@
 2008-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	Call setStatusRealtime() in constructor.
+	* src/RealtimeCommand.cc
+	* src/RealtimeCommand.h
+
+2008-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	Call Download::setNoWait(true) to execute newly created command without
 	a pause.
 	* src/AbstractCommand.cc
